--- a/stylesheets/_map-legend.scss
+++ b/stylesheets/_map-legend.scss
@@ -12,7 +12,7 @@
         .legend-element {
             display: flex;
             align-items: center;
-            padding: 4px 10px;
+            padding: 4px 6px;
             cursor: pointer;
             user-select: none;
             opacity: 0.2;
@@ -21,15 +21,15 @@
                 display: none;
             }
             .color-box {
-                width: 12px;
-                height: 12px;
+                width: 10px;
+                height: 10px;
                 flex-grow: 0;
                 flex-shrink: 0;
                 border-radius: 50%;
             }
             .name {
                 display: inline-block;
-                margin-left: 6px;
+                margin-left: 4px;
                 user-select: none;
 
                 &:first-letter{
